[gd_scene load_steps=2 format=3 uid="uid://b6x8y0q5n3j4w"]

[ext_resource type="Script" path="res://src/ui/screens/campaign/phases/UpkeepPhasePanel.gd" id="1_y4r2p"]

[node name="UpkeepPhasePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4r2p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Upkeep Phase"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UpkeepCostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Calculating upkeep costs..."
horizontal_alignment = 1

[node name="CrewCostsPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CrewCostsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CrewCostsPanel/VBoxContainer"]
layout_mode = 2
text = "Crew Upkeep Costs"
horizontal_alignment = 1

[node name="CrewList" type="ItemList" parent="VBoxContainer/CrewCostsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="ResourcesPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ResourcesPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ResourcesPanel/VBoxContainer"]
layout_mode = 2
text = "Available Resources"
horizontal_alignment = 1

[node name="ResourcesList" type="ItemList" parent="VBoxContainer/ResourcesPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PayUpkeepButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Pay Upkeep" 